added server and client, but not tested

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,9 @@
-set(SRC
-    ${CMAKE_CURRENT_LIST_DIR}/client.cpp
-    ${CMAKE_CURRENT_LIST_DIR}/server.cpp)
+add_executable(Client ${CMAKE_CURRENT_LIST_DIR}/client.cpp)
+target_link_libraries(Client PRIVATE Client_impl)
 
-add_executable(client ${CMAKE_CURRENT_LIST_DIR}/client.cpp)
+add_executable(Server ${CMAKE_CURRENT_LIST_DIR}/server.cpp)
+target_link_libraries(Server PRIVATE Server_impl)
 
-add_executable(server ${CMAKE_CURRENT_LIST_DIR}/server.cpp)
-target_link_libraries(server PRIVATE spdlog::spdlog)
+add_subdirectory(client)
+add_subdirectory(server)
+
